Added download for mp3 and a preview button

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -17,6 +17,11 @@
         <div class="input-container">
             <input id="url-input" type="text" placeholder="Enter url..." />
             <button id="url-button">Download</button>
+            <button id="preview">Preview</button>
+            <select id="format">
+                <option value="mp4">.mp4</option>
+                <option value="mp3">.mp3</option>
+            </select>
         </div>
         <p id="log"></p>
     </div>
